<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".try_other_ways"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="40sp"
        android:orientation="vertical">
        <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trow"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="60sp"
            />
            -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"
            android:gravity="center"
            android:text="@string/ltotv"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:text="@string/enmobnotv"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:background="#30ffffff"
            android:hint="@string/demomob"
            android:inputType="text"
            android:padding="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/enter_otp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30ffffff"
            android:hint="@string/otp"
            android:inputType="text"
            android:padding="10sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50sp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="120sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:backgroundTint="@color/y"
                android:drawableEnd="@drawable/ic_baseline_double_arrow_24"
                android:drawableTint="@color/white"
                android:text="@string/Nxt"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:cornerRadius="100sp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:backgroundTint="@color/x"
                android:text="@string/resend_otp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="100sp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>