<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        f<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/profileiv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/todo3"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="#30ffffff"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="@string/Username"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#30ffffff"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginbtn"
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#A51CBC"
                android:text="@string/login"
                android:textSize="18sp"
                app:cornerRadius="100dp" />

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginBottom="20sp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Nam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40sp"
                android:text="@string/Nam"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>