<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40sp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/user"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="40sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="60sp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Name"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_margin="10sp"
                    android:textAlignment="center"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:layout_margin="10sp"
                    android:padding="10sp"
                    android:hint="@string/Username"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:background="#30ffffff"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DOB"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="22sp"
                    android:textAlignment="center"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dob"
                    android:layout_margin="10sp"
                    android:padding="10sp"
                    android:hint="@string/Date"
                    android:inputType="date"
                    android:textSize="20sp"
                    android:background="#30ffffff"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:textAlignment="center"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_margin="10sp"
                    android:padding="10sp"
                    android:hint="@string/mail"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:background="#30ffffff"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="4sp"
                    android:textAlignment="center"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mobile"
                    android:layout_margin="10sp"
                    android:padding="10sp"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:background="#30ffffff"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="4sp"
                    android:textAlignment="center"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password1"
                    android:layout_margin="10sp"
                    android:padding="10sp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:background="#30ffffff"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="150sp"
            android:layout_height="60sp"
            android:id="@+id/register"
            android:text="@string/Register"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_gravity="center"
            android:backgroundTint="#A51CBC"
            android:padding="10sp"
            app:cornerRadius="100pt"
            android:layout_marginBottom="40sp"
            />
        <LinearLayout
            android:id="@+id/socialicons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/google1" />

            <ImageView
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo1"
                android:src="@drawable/twitter" />

            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_margin="20dp"
                android:contentDescription="@string/todo2"
                android:src="@drawable/facebook" />
        </LinearLayout>



    </LinearLayout>
    </ScrollView>
</RelativeLayout>