<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_password"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="40sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:layout_marginBottom="50sp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/Name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="#30ffffff"
                android:hint="@string/pn"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:text="@string/Email"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="#30ffffff"
                android:hint="@string/mail"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:layout_gravity="center"
            >

            <com.google.android.material.button.MaterialButton
                android:layout_width="120sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:backgroundTint="#A51CBC"
                android:fontFamily="@font/abeezee"
                android:padding="10sp"
                android:text="@string/Nxt"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:cornerRadius="100sp" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="120sp"
                android:layout_height="60sp"
                android:id="@+id/moremb"
                android:layout_gravity="center"
                android:layout_margin="10sp"
                android:backgroundTint="#A51CBC"
                android:fontFamily="@font/abeezee"
                android:padding="10sp"
                android:text="@string/taw"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:cornerRadius="100sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>