<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".splash_screen_activity"
    android:background="@drawable/bg_ic"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/new_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30sp"
        android:layout_marginTop="60sp"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="60sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180sp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/Hello"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:lineHeight="50sp"
            android:text="@string/msg"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="300sp"
            android:layout_height="80sp"
            android:layout_marginStart="40sp"
            android:layout_marginTop="150sp"
            android:layout_marginEnd="40sp"
            android:backgroundTint="#7BDBF0"
            android:id="@+id/get_start"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="30sp"
            android:text="@string/gsn"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="100sp"


            />


    </LinearLayout>

</RelativeLayout>